remove PrioritizedProcessor, order is now inferred naturally from the configuration order